# TempSensor

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakePresets.json  README.md  STM32L452REIX_FLASH.ld  STM32L452REIX_RAM.ld  TempSensor Debug.launch  TempSensor.ioc
Core/: CMakeLists.txt
Core/Inc/: main.h  main_cpp.h  stm32l4xx_hal_conf.h
Core/Src/: main.c  main.cpp  main_cpp.cpp  stm32l4xx_hal_msp.c
Drivers/STM32L4xx_HAL_Driver/: CMakeLists.txt
Inc/: Pins.hpp
config/: CMakeLists.txt
config/inc/: stm32l4xx_hal_conf.h
docs/: LCD.md
drivers/: CMakeLists.txt
drivers/CMSIS/: CMakeLists.txt
drivers/STM32L4xx_HAL_Driver/: CMakeLists.txt
inc/: ILCD.hpp  LCD.hpp  LCD_TC1602A.hpp  Pins.hpp  Serial.hpp  Time.hpp
src/: ILCD.cpp  LCD.cpp  LCD_TC1602A.cpp  Serial.cpp  Time.cpp  main.cpp  stm32l4xx_it.c
